# europe-housing-trends

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: project.yaml
docs/: 01_research_question.md  02_data_sources.md  03_conclusion.md
notebooks/: 01-exploration.ipynb  01_data_preparation.ipynb  01_exploration.ipynb  02_exploratory_analysis.ipynb  03_correlation_analysis.ipynb  04_affordability_analysis.ipynb  05_conclusion_and_report.ipynb
scripts/: analysis_utils.py  ingest_eurostat_csvs.py
tests/: conftest.py  test_analysis_utils.py  test_ingest_unit.py  test_pipeline_regression.py  test_tidy_save.py
