[project]
name = "europe-housing-trends"
version = "0.1.0"
description = ""
authors = [
    {name = "DanDan93SB",email = "yordanbah9376@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "europe_housing_trends", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
